# similarity-relation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: base.yaml
outputs/: author_similarity_results.json  paper_similarity_results.json
scripts/: prepare_aminer_dump.py  run_author_similarity.py  run_paper_similarity.py
src/mvsim/: aggregation.py  cli.py  experiments.py  schemas.py  settings.py
src/mvsim/data/: aminer_adapter.py  build_dataset.py  io.py
src/mvsim/evaluation/: metrics.py
src/mvsim/features/: text.py
src/mvsim/fusion/: multiview.py
src/mvsim/graph/: operators.py  temporal.py
src/mvsim/utils/: logging_utils.py
tests/: test_operators.py
